Fixed welcome board heading styles. Fixed particles going out of bounds on smaller devices. Make experiences section appear sooner. Fixed GitHub spelling on carousel descriptions. Made Navbar smaller on smaller devices

--- a/client/src/styles/Navbar.scss
+++ b/client/src/styles/Navbar.scss
@@ -183,14 +183,17 @@
     }
 
     .actve.navbar {
-        height: 700px;
+        height: 450px;
         flex-direction: column;
         text-align: right;
         background: rgba(0, 0, 0, 0.9);
+        align-items: center;
 
         #hamburger {
             display: grid;
             transform: scale(0.4);
+            padding: 15px;
+            margin-bottom: 15px;
         }
 
         .Button {
